--- a/frontend/src/Navbar.module.css
+++ b/frontend/src/Navbar.module.css
@@ -6,7 +6,10 @@
     padding: 5px 10px;
     transition: color 0.3s, transform 0.2s;
 }
-
+.para{
+    font-size: medium;
+    color: black;
+}
 /* Add hover effect */
 .navLinks li a:hover, .active {
     color: #4A1F6B;
