--- a/hollowbricks-admin/src/components/Dashboard.module.css
+++ b/hollowbricks-admin/src/components/Dashboard.module.css
@@ -125,7 +125,7 @@
 }
 
 .card h3 {
-  color: #6B42A0;
+  color: #421d72;
   margin-bottom: 10px;
 }
 
@@ -159,4 +159,16 @@
   box-shadow: 0 0 12px rgba(0, 0, 0, 0.05);
   width: 500px;
   height: 300px;
+}
+.cardButton {
+  background: #803db4;
+    color: white;
+    padding: 16px 40px;
+    border: none;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 30px;
+    transition: background-color 0.3s, transform 0.2s;
+    align-self: center;
 }
