--- a/hollowbricks-admin/src/components/Orders.module.css
+++ b/hollowbricks-admin/src/components/Orders.module.css
@@ -4,6 +4,11 @@
   overflow: hidden;
 }
 
+
+.ordersContainer {
+  max-height: 500px; /* Adjust height as needed */
+}
+
 .ordersContainer {
   flex: 1;
   padding: 50px;
